--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
     "os.makedirs(output_dir + 'full/', exist_ok=True)\n",
     "os.makedirs(output_dir + 'abbr/', exist_ok=True)\n",
     "\n",
-    "fast_mode = True  # Set to True for quick testing\n",
+    "fast_mode = False  # Set to True for quick testing\n",
     "which_runner = pack_runner.baseline_runner  # Which example runner to use\n",
     "n_parallel_processes = 2 if kgs.env=='local' else 4\n",
     "print(f\"Will use {n_parallel_processes} parallel processes\")"
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f309d92c",
    "metadata": {},
    "outputs": [
@@ -7585,7 +7585,7 @@
     "result_queue = Queue()\n",
     "active_processes = []\n",
     "completed_results = []\n",
-    "seeds_to_run = [a+0 for a in list(range(n_seeds))]\n",
+    "seeds_to_run = [a+2000 for a in list(range(n_seeds))]\n",
     "next_seed_idx = 0\n",
     "\n",
     "# Limit parallel processes if using GPU (to avoid memory issues)\n",
