--- a/analysis/compare_solutions.ipynb
+++ b/analysis/compare_solutions.ipynb
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "450c8fbb13314f40b6cc1f6a8181b020",
+       "model_id": "95a67f5dcb5d4d2f803dcd9c6b1ff6db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "891f8641d3fa4c65aa391e49a67661ef",
+       "model_id": "b804847ccddc433f8854e908ffc23dc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fc2a04d7f49412798831c45fbbd1279",
+       "model_id": "4c2667e8b2ed4fb4b7b2f41d85fecc3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,14 +326,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "e9977477",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init LAP CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling LAP kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved.cu -o /mnt/d//packing/temp/lap_batch.cubin\n",
+      "ptxas info    : 0 bytes gmem\n",
+      "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for diversity_shortcut_kernel\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 20.314 ms\n",
+      "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
+      "ptxas info    : Function properties for compute_costs\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 3.139 ms\n",
+      "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for auction_kernel\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 7.228 ms\n",
+      "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for hungarian_kernel\n",
+      "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 15.494 ms\n",
+      "\n",
+      "\n",
+      "--- Kernel: hungarian_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 40\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 1808\n",
+      "\n",
+      "--- Kernel: auction_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 35\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n",
+      "\n",
+      "--- Kernel: compute_costs ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 29\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n",
+      "\n",
+      "--- Kernel: diversity_shortcut_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 29\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d24f5c212cbc488db9db20781656dad9",
+       "model_id": "acef7f0a4c204f658b7574081722c319",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfec350214f2444aa9ef7600321351a0",
+       "model_id": "9f0b17b95c4a4826953c825211da76ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de6aa05b92a64c57ae7c87fa21860bc3",
+       "model_id": "ce2fc95449174c9493a0d3a0af5151c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b18afd5a955c4a68b99806998d9f7ad5",
+       "model_id": "1ae4a49154e54b78a485120d393445bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00fc1405c33f48759ad16180b1bb2fae",
+       "model_id": "00632e0e4ca645f08fbbca7b3e7cb93e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -514,11 +575,11 @@
     {
      "data": {
       "text/plain": [
-       "(np.float32(8.360492),\n",
-       " np.float32(14.064564),\n",
-       " np.float32(14.042908),\n",
-       " np.float32(17.319529),\n",
-       " np.float32(16.647873))"
+       "(np.float32(7.99979),\n",
+       " np.float32(14.078205),\n",
+       " np.float32(14.035875),\n",
+       " np.float32(17.33271),\n",
+       " np.float32(16.988785))"
       ]
      },
      "execution_count": 13,
@@ -527,7 +588,7 @@
     }
    ],
    "source": [
-    "np.sum(mine[1][:21]),np.sum(mine[1][21:61]),np.sum(mine[1][61:101]),np.sum(mine[1][101:151]),np.sum(mine[1][151:201])"
+    "np.sum(mine[1][:20]),np.sum(mine[1][20:60]),np.sum(mine[1][60:100]),np.sum(mine[1][100:150]),np.sum(mine[1][150:])"
    ]
   },
   {
@@ -539,11 +600,11 @@
     {
      "data": {
       "text/plain": [
-       "(np.float64(8.443967990853231),\n",
-       " np.float64(14.589415300884221),\n",
-       " np.float64(14.110196839313517),\n",
-       " np.float64(17.18143686361819),\n",
-       " np.float64(16.56708349928084))"
+       "(np.float64(8.067515221298276),\n",
+       " np.float64(14.607367907415309),\n",
+       " np.float64(14.11821758229374),\n",
+       " np.float64(17.19157293937921),\n",
+       " np.float64(16.907426843563467))"
       ]
      },
      "execution_count": 14,
@@ -552,7 +613,7 @@
     }
    ],
    "source": [
-    "np.sum(theirs[1][:21]),np.sum(theirs[1][21:61]),np.sum(theirs[1][61:101]),np.sum(theirs[1][101:151]),np.sum(theirs[1][151:201])"
+    "np.sum(theirs[1][:20]),np.sum(theirs[1][20:60]),np.sum(theirs[1][60:100]),np.sum(theirs[1][100:150]),np.sum(theirs[1][150:])"
    ]
   },
   {
