--- a/analysis/runs/controller copy 2.ipynb
+++ b/analysis/runs/controller copy 2.ipynb
@@ -57,7 +57,7 @@
     "# User inputs\n",
     "N_TREES_LIST = [68]\n",
     "N_PROCESSES = 2 if kgs.env=='local' else 4  # Maximum concurrent processes\n",
-    "DIAGNOSTIC_INTERVAL = 10  # Seconds between diagnostic updates\n",
+    "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
     "SEED_BASE = 89  # Base seed for reproducibility\n",
     "\n",
     "# Derived inputs (edit manually to customize seeds per task)\n",
@@ -75,7 +75,8 @@
     "import pack_runner\n",
     "\n",
     "base_runner = pack_ga3.baseline_symmetry_180()\n",
-    "base_runner.n_generations = 1500\n",
+    "base_runner.n_generations = 2500\n",
+    "base_runner.ga.target_score = 0.34\n",
     "\n",
     "base_runner.ga.do_legalize = True\n",
     "base_runner.use_atomic_save = True  # Enable atomic saves for multiprocess safety\n",
@@ -389,7 +390,7 @@
      "output_type": "stream",
      "text": [
       "============================================================\n",
-      "Diagnostics Update - 2026-01-08 10:35:58\n",
+      "Diagnostics Update - 2026-01-08 10:58:12\n",
       "============================================================\n",
       "\n",
       "N=68, seed=0 [RUNNING ]: No checkpoint found\n",
