Prepping for controller run

--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -48,11 +48,12 @@
     "# User inputs\n",
     "N_TREES_LIST = [68] + [x.item() for x in np.arange(20, 101, 2)]\n",
     "N_PROCESSES = 2 if kgs.env=='local' else 4  # Maximum concurrent processes\n",
-    "DIAGNOSTIC_INTERVAL = 10  # Seconds between diagnostic updates\n",
-    "SEED_BASE = 89  # Base seed for reproducibility\n",
+    "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
+    "SEED_LIST = [90,91]  # Base seed for reproducibility\n",
     "\n",
     "# Derived inputs (edit manually to customize seeds per task)\n",
-    "N_TREES_SEED_LIST = [(N, SEED_BASE) for N in N_TREES_LIST]\n",
+    "N_TREES_SEED_LIST = [(N, SEED) for N in N_TREES_LIST for SEED in SEED_LIST]\n",
+    "print(N_TREES_SEED_LIST)\n",
     "\n",
     "# Set up checkpoint/log directory\n",
     "CHECKPOINT_DIR = 'controller_runs/' if not DO_CHECK else 'check_runs/'\n",
@@ -64,6 +65,11 @@
     "import pack_runner\n",
     "\n",
     "base_runner = pack_ga3.baseline_symmetry_180()\n",
+    "base_runner.ga.ga_base.initializer.ref_sol_crystal_type = 'Perfect dimer'\n",
+    "base_runner.ga.ga_base.initializer.ref_sol_axis1_offset = None\n",
+    "base_runner.ga.ga_base.initializer.ref_sol_axis2_offset = None\n",
+    "raise 'choose this properly'\n",
+    "base_runner.ga.stop_check_generations_scale = 10\n",
     "\n",
     "base_runner.ga.do_legalize = True\n",
     "base_runner.use_atomic_save = True  # Enable atomic saves for multiprocess safety\n",
