--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "667de78c",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
     "\n",
     "# User inputs\n",
     "N_TREES_LIST = [68] + [x.item() for x in np.arange(20, 101, 2)]\n",
-    "N_PROCESSES = 2 if kgs.env=='local' else 4  # Maximum concurrent processes\n",
+    "N_PROCESSES = 2 if kgs.env=='local' else 3  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
     "SEED_LIST = [90,91]  # Base seed for reproducibility\n",
     "\n",
@@ -66,9 +66,8 @@
     "\n",
     "base_runner = pack_ga3.baseline_symmetry_180()\n",
     "base_runner.ga.ga_base.initializer.ref_sol_crystal_type = 'Perfect dimer'\n",
-    "base_runner.ga.ga_base.initializer.ref_sol_axis1_offset = None\n",
-    "base_runner.ga.ga_base.initializer.ref_sol_axis2_offset = None\n",
-    "raise 'choose this properly'\n",
+    "base_runner.ga.ga_base.initializer.ref_sol_axis1_offset = 0.\n",
+    "base_runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.5\n",
     "base_runner.ga.stop_check_generations_scale = 10\n",
     "\n",
     "base_runner.ga.do_legalize = True\n",
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "de91ca16",
    "metadata": {},
    "outputs": [],
@@ -121,6 +120,10 @@
     "        runner = dill.loads(base_runner_pickled)\n",
     "        runner.seed = seed\n",
     "        runner.filename = checkpoint_dir + f'ga_N{N_trees}_seed{seed}'\n",
+    "\n",
+    "        if seed%2==0:\n",
+    "            runner.ga.ga_base.initializer.ref_sol_axis1_offset = None\n",
+    "            runner.ga.ga_base.initializer.ref_sol_axis2_offset = None\n",
     "        \n",
     "        # Configure for this N_trees\n",
     "        runner.ga.ga_base.N_trees_to_do = N_trees\n",
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b572b28b",
    "metadata": {},
    "outputs": [],
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "39a25c9f",
    "metadata": {},
    "outputs": [],
